# auth0-microservice

./: README.md  docker-compose.yaml
users-backend/: .env-example  pyproject.toml
users-backend/users_backend/: auth.py  config.py  main.py  routes.py
users-frontend/: .env-example  Dockerfile  package-lock.json  package.json
users-frontend/src/: App.js  index.js
users-frontend/src/auth/: Auth0ProviderWithHistory.js
users-frontend/src/components/: AuthenticationButton.js  Hero.js  NavBar.js
users-frontend/src/views/: ExternalAPI.js  Home.js
