[tool.poetry]
name = "users-backend"
version = "0.1.0"
description = ""
authors = ["tinnaing347 <tinnaing347@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi-auth0 = "^0.2.1"
fastapi = "^0.70.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
